--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -5,10 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="/check-js-test.js"></script>
-<script>
-    let service = new My.Service();
-    service.value("foo", "bar")
-</script>
+<script src="check-kotlin-js-test.js"></script>
 </body>
 </html>
